# neovim_config

./: .gitignore  .gitmodules  README.md  drawingboard.txt  init.lua  install.sh  lazy-lock.json
.github/ISSUE_TEMPLATE/: bug_report.md
Examples/AutoComplete/: main.cpp  main.h
Examples/Extlibs Example/: main.cpp
Examples/Gtest Example/: CMakeLists.txt  main.cpp
Examples/Gtest Example/test/: CMakeLists.txt  unit_test.cpp
configPlug/: bufferline.lua  completion.lua  dashboard.lua  explorer.lua  git.lua  misc.lua  neo-tree.lua  outline.lua  statusline.lua  symbols.lua  terminal.lua  theme.lua  window.lua
core/: autocommands.lua  mappings.lua  settings.lua
lua/: completion.lua  dashboard.lua  debugging.lua  ds.lua  misc.lua  plugins.lua  quickrun.lua  statusline.lua  theme.lua  window.lua
lua/cmp/: other.lua
lua/core/: mappings.lua  settings.lua
snippets/: all.json  all.snippets  cpp.json  cpp.snippets  package.json  python.json
snippets/python/: base.json  python.json
